<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <Button
        android:id="@+id/buttonCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding10"
        android:clickable="false"
        android:text="@string/check_step_sensor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView_sensors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding10"
        android:text="@string/list_of_sensors"
        android:textSize="@dimen/fontsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonCheck" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonStop"
        app:layout_constraintTop_toBottomOf="@id/textView_sensors" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        app:layout_constraintStart_toEndOf="@id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_sensors" />

    <TextView
        android:id="@+id/textView_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding10"
        android:text="@string/number_of_steps"
        android:textSize="@dimen/fontsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonStart" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/paddingStartEnd"
        android:contentDescription="@string/save"
        app:layout_constraintBottom_toBottomOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/paddingStartEnd"
        app:layout_constraintBottom_toBottomOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_delete"
        android:contentDescription="@string/delete" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingStart="@dimen/paddingStartEnd"
        android:paddingEnd="@dimen/paddingStartEnd"
        android:text="@string/statistics"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <TextView
        android:id="@+id/lastSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/paddingStartEnd"
        android:paddingEnd="@dimen/paddingStartEnd"
        android:paddingBottom="@dimen/padding5"
        android:paddingTop="@dimen/padding5"
        android:text="@string/last_walks"
        android:textSize="@dimen/fontsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/totalSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/paddingStartEnd"
        android:paddingEnd="@dimen/paddingStartEnd"
        android:paddingBottom="@dimen/padding5"
        android:paddingTop="@dimen/padding5"
        android:text="@string/total_walks"
        android:textSize="@dimen/fontsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastSteps" />


    <TextView
        android:id="@+id/accumulatedSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/paddingStartEnd"
        android:paddingEnd="@dimen/paddingStartEnd"
        android:paddingBottom="@dimen/padding5"
        android:paddingTop="@dimen/padding5"
        android:text="@string/accumulated_steps"
        android:textSize="@dimen/fontsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalSteps" />


</androidx.constraintlayout.widget.ConstraintLayout>